force-app/main/default/objects/Verticals__c/Verticals__c.object-meta.xml
<CustomObject>
    <description>Object designed to track account verticals as well as PSR by Major/Minor</description>
    <label>Vertical</label>
    <nameField>
        <label>Vertical Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verticals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>