force-app/main/default/objects/Verticals__c/fields/East_Sponsor_Phone__c.field-meta.xml
<CustomField>
    <fullName>East_Sponsor_Phone__c</fullName>
    <formula>East_Vertical_Sponsor__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East Sponsor&apos;s Phone</label>
    <type>Text</type>
</CustomField>