force-app/main/default/objects/Verticals__c/fields/East_Vertical_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>East_Vertical_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigns designated sponsor to the vertical from the Primary Sales Rep object</description>
    <label>East Vertical Sponsor</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>Verticals</relationshipName>
    <type>Lookup</type>
</CustomField>