force-app/main/default/objects/Verticals__c/fields/Relevant_Links__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Links__c</fullName>
    <label>Relevant Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>