force-app/main/default/objects/Verticals__c/fields/See_Contacts_for_this_Vertical__c.field-meta.xml
<CustomField>
    <fullName>See_Contacts_for_this_Vertical__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O70000003bs01/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O70000003bs01?pv0=&quot;)

/* Append the Vertical Name */
&amp;  Name 
,

/* Specify the link text */
&quot;See Contacts for this Vertical&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <label>See Contacts for this Vertical</label>
    <type>Text</type>
</CustomField>