force-app/main/default/objects/Verticals__c/fields/See_Vendors_for_This_Vertical__c.field-meta.xml
<CustomField>
    <fullName>See_Vendors_for_This_Vertical__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O70000003aD8i/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O70000003aD8i?pv0=&quot;)

/* Append the Vertical Name */
&amp;  Name 
,

/* Specify the link text */
&quot;See Vendors for this Vertical&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See Vendors for This Vertical</label>
    <type>Text</type>
</CustomField>