force-app/main/default/objects/Verticals__c/fields/See_Vertical_s_Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>See_Vertical_s_Lost_Opportunities__c</fullName>
    <description>Replicating the link of the same name for display on a reporting tab in lightning.</description>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O5w00000AVDO1EAP/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O5w00000AVDO1EAP?pv0=&quot;)

/* Append the Vertical Name */
&amp;  Name 
,

/* Specify the link text */
&quot;See Vertical&apos;s Lost Opportunities&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See Vertical&apos;s Lost Opportunities</label>
    <type>Text</type>
</CustomField>