force-app/main/default/objects/Verticals__c/fields/See_Vertical_s_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>See_Vertical_s_Won_Opportunities__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O70000003aD3OEAU/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O70000003aD3OEAU?pv0=&quot;)

/* Append the Vertical Name */
&amp;  Name 
,

/* Specify the link text */
&quot;See Vertical&apos;s Won Opportunities&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>See Vertical&apos;s Won Opportunities</label>
    <type>Text</type>
</CustomField>