force-app/main/default/objects/Verticals__c/fields/Vertical_Description__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Description__c</fullName>
    <label>Vertical Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>