force-app/main/default/objects/Verticals__c/fields/Vertical_Major__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Major__c</fullName>
    <description>Assigns a Vertical Major - DO NOT UPDATE TO MATCH VERTICALS!!!! Picklist values can NOT be longer than 30 characters</description>
    <label>Vertical Major</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Food Processing</fullName>
            </value>
            <value>
                <fullName>FS - Other (General FS)</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Graphic Design/Advertising</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Manufacturing (Non Food/Print)</fullName>
            </value>
            <value>
                <fullName>Niche - FS(Lodging, Lg Venues)</fullName>
            </value>
            <value>
                <fullName>Office(PropMgmt/BSC/HigherEd)</fullName>
            </value>
            <value>
                <fullName>Printer - Commercial/Sheet Fed</fullName>
            </value>
            <value>
                <fullName>Printer - Digital/Wide Format</fullName>
            </value>
            <value>
                <fullName>Printer - Gang Run</fullName>
            </value>
            <value>
                <fullName>Printer - Graphics/Consumables</fullName>
            </value>
            <value>
                <fullName>Printer - In-plant</fullName>
            </value>
            <value>
                <fullName>Printer - Other</fullName>
            </value>
            <value>
                <fullName>Printer - Packaging</fullName>
            </value>
            <value>
                <fullName>Printer - Sheetfed/Web Combo</fullName>
            </value>
            <value>
                <fullName>Printer - Web</fullName>
            </value>
            <value>
                <fullName>Redistribution - FS</fullName>
            </value>
            <value>
                <fullName>Re-D - Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>PKG - Other (General PKG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>