force-app/main/default/objects/Verticals__c/fields/Vertical_s_Opps_Created_in_Last_7_Days__c.field-meta.xml
<CustomField>
    <fullName>Vertical_s_Opps_Created_in_Last_7_Days__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;/lightning/r/Report/00O70000003aD2V/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O70000003aD2V?pv0=&quot;)

/* Append the Vertical Name */
&amp; Name
,

/* Specify the link text */
&quot;See Vertical&apos;s Opps Created in Last 7 Days&quot;,

/* Keep it in the same browser tab to avoid full page reload */
&quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical&apos;s Opps Created in Last 7 Days</label>
    <type>Text</type>
</CustomField>