force-app/main/default/objects/Verticals__c/fields/West_Sponsors_Phone__c.field-meta.xml
<CustomField>
    <fullName>West_Sponsors_Phone__c</fullName>
    <formula>West_Vertical_Sponsor__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>West Sponsor&apos;s Phone</label>
    <type>Text</type>
</CustomField>