force-app/main/default/objects/Verticals__c/fields/West_Vertical_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>West_Vertical_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>West Vertical Sponsor</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipName>Verticals1</relationshipName>
    <type>Lookup</type>
</CustomField>